2002-05-13  Adrian Aichner  <adrian@xemacs.org>

	* code-process.el (call-process): Process-related docstring
	improvements spurred by Norbert Koch.
	* code-process.el (call-process-region): Ditto.
	* code-process.el (start-process): Ditto.

2002-05-09  Ben Wing  <ben@xemacs.org>

	* keydefs.el (global-map): New.
	* msw-init.el (init-post-mswindows-win):
	ctrl-delete is like M-d, in keeping with PC standards.  it still
	will function at its original (delete-selection), when there's a
	selection, with the new associated pending-del patch.

2002-04-14  Golubev I. N.  <gin@mo.msk.ru>

	* info.el (Info-find-index-alternatives): fix missing \ in \t.
	Port of `Info-index' change from 21.4.

2002-04-23  Jerry James  <james@xemacs.org>

	* select.el (get-clipboard): Document connection with
        interprogram-paste-function.
	* select.el (get-selection): Document that nil should be
        returned if XEmacs owns the selection.
        Remove unnecessary variable.
	* simple.el (kill-ring-max): Synch with FSF Emacs 21.2.
	* simple.el (kill-new): Synch with FSF Emacs 21.2

2002-05-05  Ben Wing  <ben@xemacs.org>

	* bytecomp-runtime.el (with-obsolete-variable):
	* bytecomp-runtime.el (with-obsolete-function):
	Doc string changes.

	* compat.el:
	* compat.el (compat-current-package):
	* compat.el (compat-current-package)): New.
	* compat.el (compat-define-compat-functions): New.
	* compat.el (compat-define-group):
	* compat.el (compat-define-functions): Removed.
	* compat.el (compat-defun): New.
	* compat.el (compat-define-function): New.
	* compat.el (compat-wrap-runtime): New.
	* compat.el (compat-wrap): New.
	* compat.el (compat): Removed.
	* compat.el (overlays):
	* compat.el (overlayp): New.
	* compat.el (make-overlay): New.
	* compat.el (move-overlay): New.
	* compat.el (delete-overlay): New.
	* compat.el (overlay-start): New.
	* compat.el (overlay-end): New.
	* compat.el (overlay-buffer): New.
	* compat.el (overlay-properties): New.
	* compat.el (overlays-at): New.